Fix gaps

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ background-image: var(--background-image);
 background-repeat: no-repeat;
 background-size: cover;
 background-attachment: fixed;
+gap: 20px;
 
 @media (width >= 375px) {
   max-inline-size: 768px;
@@ -17,12 +18,12 @@ background-attachment: fixed;
 
 @media (width >= 768px) {
   max-inline-size: 1024px;
-
+  gap: 40px;
 }
 
 @media (width >= 1024px) {
   max-inline-size: 1024px;
-
+  gap: 40px;
 }
 
 }
